name:                gloss-juicy
version:             0.1.0.0
synopsis:            Load JuicyPixel images as gloss Pictures
-- description:         
homepage:            http://github.com/alpmestan/gloss-juicy
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>
maintainer:          Alp Mestanogullari <alpmestan@gmail.com>
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Graphics.Gloss.Juicy
     
  build-depends:       base >=4 && < 5,
                       bytestring,
                       bmp >= 1.2.4.1,
                       gloss,
                       JuicyPixels,
                       vector
  ghc-options:         -O2 -Wall -threaded

executable gloss-juicy
  main-is:             gloss-juicy.hs
  build-depends:       base >= 4 && < 5,
                       bytestring,
                       bmp >= 1.2.4.1,
                       gloss,
                       JuicyPixels,
                       vector
  ghc-options:         -O2 -Wall -threaded
