name:                gloss-juicy
version:             0.2.2
synopsis:            Load any image supported by Juicy.Pixels in your gloss application
description:         Lets you convert any image supported by Juicy.Pixels in a gloss application by converting to gloss' Bitmap representation.
		     .
                     Version 0.1.2 just enabled caching (from a frame to the next, and so on) of the images you load, so that they are not recomputed for each frame. Credits go to Jonathan Daugherty for the patch.
homepage:            http://github.com/alpmestan/gloss-juicy
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>
maintainer:          Alp Mestanogullari <alpmestan@gmail.com>
copyright:           2013-2015 Alp Mestanogullari
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Gloss.Juicy

  build-depends:       base >=4 && < 5,
                       bytestring,
                       bmp >= 1.2.4.1,
                       gloss >= 1.10,
                       JuicyPixels,
                       vector,
                       containers,     
                       gloss,          
                       gloss-rendering,
                       GLFW-b,
                       OpenGLRaw,    
                       GLUT
  other-modules:       Graphics.Gloss.ExportPNG

  ghc-options:         -O2 -Wall

executable gloss-juicy-viewer
  main-is:             gloss-juicy.hs
  hs-source-dirs:      app
  build-depends:       base >= 4 && < 5,
                       bytestring,
                       bmp >= 1.2.4.1,
                       gloss >= 1.10,
                       JuicyPixels,
                       vector,
                       gloss-juicy
  ghc-options:         -O2 -Wall -threaded

executable gloss-juicy-exporter
  main-is: Export.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gloss
    , gloss-juicy
