Name:                bmp
Version:             1.2.3.4
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           stable
Category:            Codec
Homepage:            http://code.ouroborus.net/bmp
Bug-reports:         bmp@ouroborus.net
Description:
	Read and write uncompressed BMP image files. 100% robust Haskell implementation.
Synopsis:
        Read and write uncompressed BMP image files.

Cabal-version:       >= 1.8

source-repository head
        type:           darcs
        location:       http://code.ouroborus.net/bmp/bmp-head/

Library
  build-Depends: 
        base                 == 4.*,
        bytestring           == 0.10.*,
        binary               >= 0.6

  ghc-options:
        -Wall -O2 -fno-warn-missing-signatures

  extensions:
        BangPatterns

  exposed-modules:
        Codec.BMP

  other-modules:
        Codec.BMP.Base
        Codec.BMP.Compression
        Codec.BMP.BitmapInfo
        Codec.BMP.BitmapInfoV3
        Codec.BMP.BitmapInfoV4
        Codec.BMP.BitmapInfoV5
        Codec.BMP.CIEXYZ
        Codec.BMP.Error
        Codec.BMP.FileHeader
        Codec.BMP.Pack
        Codec.BMP.Unpack
